# tcl-brotli

./: .gitignore  .gitmodules  Makefile.in  brotliConfig.sh.in  configure.ac  meson.build
bench/: decode.bench  run.tcl
generic/: brotli.c  brotli.decls  brotli.h.in  brotliDecls.h  brotliInt.h  brotliStubInit.c  brotliStubLib.c
tests/: brotli.test
